feat(user): add password, hash using bcrypt and is_email_verified field
