# docs/swagger.json
@@ -200,9 +200,14 @@
         "http.registerUserRequest": {
             "type": "object",
             "required": [
+                "password",
                 "username"
             ],
             "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "secret"
+                },
                 "username": {
                     "type": "string",
                     "example": "john"
@@ -213,8 +218,12 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "integer",
-                    "example": 1
+                    "type": "string",
+                    "example": "1"
+                },
+                "is_email_verified": {
+                    "type": "boolean",
+                    "example": true
                 },
                 "username": {
                     "type": "string",
